Fix modal background so it doesn't create horiz scrollbar

--- a/style.css
+++ b/style.css
@@ -85,8 +85,9 @@ a {
 .modal-wrapper {
 	z-index: 500;
 	position: absolute;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
+	/*max-width: 100%;*/
 	top: 0px;
 	left: 0px;
 	background-color: rgba(0,0,0,0.5);
